# spark-study

./: .gitignore  README.md
dbt_study/: .user.yml  dbt_project.yml  profiles.yml
dbt_study/models/example/: my_first_dbt_model.sql  my_second_dbt_model.sql
standalone/: docker-compose.yml
standalone/hive/dockerfile.d/: Dockerfile
standalone/minio/dockerfile.d/: Dockerfile
standalone/spark/logs/: spark--org.apache.spark.deploy.history.HistoryServer-1-1075c5ebde59.out  spark--org.apache.spark.deploy.master.Master-1-1075c5ebde59.out  spark--org.apache.spark.deploy.worker.Worker-1-86252a506e0d.out  spark--org.apache.spark.sql.hive.thriftserver.HiveThriftServer2-1-1075c5ebde59.out
standalone_3.3.2_hive/: docker-compose.yml
standalone_3.3.2_hive/hive/dockerfile.d/: Dockerfile
standalone_3.3.2_hive/minio/dockerfile.d/: Dockerfile
standalone_3.3.2_hive/spark/dockerfile.d/: Dockerfile
standalone_delta/: docker-compose.yml
standalone_delta_hive/spark/dockerfile.d/: Dockerfile
standalone_hive/: docker-compose.yml
standalone_hive/hive/dockerfile.d/: Dockerfile
standalone_hive/notebook/: spark_connect_server.ipynb  spark_mlflow.ipynb  spark_sql_connection.ipynb  sparknlp_quickstart.ipynb
standalone_iceberg/: docker-compose.yml
standalone_iceberg_hive/: docker-compose.yml
standalone_unitycatalog/: docker-compose.yml
standalone_unitycatalog/spark/dockerfile.d/src/: dependencies.txt  entrypoint.sh  jupyter_lab_config.py  pyproject.toml  setup.sh
standalone_unitycatalog/spark/dockerfile.d/src/conf/: spark-defaults.conf
(+32 files in other folders)
